# pgtgpigpio

./: .gitignore  CMakeLists.txt  LICENSE.txt  PgTgPiGpio.c  PgTgPiGpio.conf  PgTgPiGpio.service  ReadMe.md  build  deploy  installPgTgPiGpio  package  relaytest.c
cmake/: aarch64-rpi4-toolchain.cmake
packaging/DEBIAN/: control  postinst  postrm  prerm
